src/widgets/footer/footer.scss
.footer {
  background-color: $color-gray-900;

  &.content {
    padding: 40px 80px;

    & .desktop-view {
      display: flex;
      gap: 76px;
      align-items: flex-start;
      justify-content: flex-start;

      & .left {
        display: flex;
        gap: 168px;
      }

      // AboutList component styles
      .about-list {
        display: flex;
        flex-direction: column;
        gap: $gap-l;
        align-items: baseline;
        justify-content: flex-start;

        font-size: $font-size-m;
        font-weight: $font-weight-medium;
        line-height: 24px;
        color: $color-gray-100;
        letter-spacing: 0;

        .about-links {
          list-style-type: none;

          & li:not(:last-child) {
            margin-bottom: 24px;
          }

          a {
            @extend %transition-all;

            color: currentcolor;

            &:hover {
              color: $color-gray-400;
            }
          }
        }
      }

      @include media-tablet-large {
        display: none;
      }

      @include media-laptop-medium {
        gap: $gap-xxxl;

        & .left {
          gap: $gap-xxxl;
        }
      }
    }

    .copyright {
      margin-top: 64px;
      line-height: 24px;
      color: $color-white;
    }

    @include media-laptop {
      padding: 40px;
    }

    @include media-tablet {
      padding: 40px 16px;
    }
  }
}

